<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/showingCourseName"
        android:inputType="none"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="TextView"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/courseNameFull" />

    <EditText
        android:id="@+id/text_courseStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/courseStartDate"
        android:inputType="date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showingCourseName" />

    <EditText
        android:id="@+id/text_courseEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/courseEndDate"
        android:inputType="date"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_courseStartDate" />

    <EditText
        android:id="@+id/courseHours"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hours"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/text_courseEndDate"
        app:layout_constraintStart_toStartOf="parent"

        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="256dp" />


    <EditText
        android:id="@+id/courseDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/courseDescription"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/numberOfStudents"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <EditText
        android:id="@+id/numberOfStudents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/numberOfStudents"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/courseHours"/>

    <Switch
        android:id="@+id/teach"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/teach"
        app:layout_constraintTop_toBottomOf="@+id/courseDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateStatus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/updateStatus"
        app:layout_constraintTop_toBottomOf="@id/teach"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>