<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.StudentManageCourseActivity">

    <LinearLayout
        android:id="@+id/courseIntroInstructorManage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/courseDetails"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/courseCodeInstructorManageCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:hint="@string/CourseCodeInstructorManage" />

        <TextView
            android:id="@+id/courseNameIntructorManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/courseNameFull" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/courseDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/divider5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseIntroInstructorManage">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/day1Dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="32dp"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/day1StartTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/startTime"
                android:inputType="time"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/day2Dropdown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/day2StartTIme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/startTime"
                android:inputType="time"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>

        <EditText
            android:id="@+id/lectureDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/durationOfLecture"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/courseCapacity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/courseCapacity"
            android:inputType="number"
            android:minHeight="48dp" />

        <EditText
            android:id="@+id/courseDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/courseDescriptionInstructorManage"
            android:inputType="textMultiLine"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/saveChangesInstructor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enrolBtn" />

        <Button
            android:id="@+id/unenrolBtnStudentCourse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/unenrolBtn" />

    </LinearLayout>

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@id/menuBtns"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/courseDetails" />

    <LinearLayout
        android:id="@+id/menuBtns"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider5">

        <Button
            android:id="@+id/logoutInstructorManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/logout" />

        <Button
            android:id="@+id/homeBtnInstructorManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_weight="1"
            android:text="@string/homeBtn" />

        <Button
            android:id="@+id/backBtnInstructorManage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/backBtn" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>